# AssessMax

./: .env.example  .gitignore  CLAUDE.md  HOW_IT_WORKS.md  PRD.md  RAILWAY_DEBUG.md  architecture.md  docker-compose.yml  implement-student-detail-trend-chart.md  railway.json  rubric.md  student-trend-variation-prompt.md  tasks.md
backend/: .dockerignore  .env.bak  .env.compose  .railway-trigger  Dockerfile  LLM_SCORING_GUIDE.txt  apprunner.yaml  create_test_data.py  deploy-persistence-pipeline.sh  nixpacks.toml  populate_data.py  process_all_transcripts.py  process_transcripts_with_llm.py  pyproject.toml  start.sh  test_llm_scoring.py  test_nlp_pipeline.py  test_system_simple.py  test_transcript_impact.py  validate_system.py
backend/alembic/: env.py
backend/alembic/versions/: 4f680d9f07c2_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/assessments/: __init__.py  (+2 more)
backend/lambdas/: __init__.py
backend/scripts/: deploy-lambdas.sh  generate_synthetic_data.py  update-lambda-env.sh
backend/test_data/: transcript_class_ms7a_session1.jsonl  transcript_class_ms7a_session2.jsonl  transcript_class_ms7b_session1.jsonl  transcript_class_ms7b_session2.jsonl  transcript_class_ms8a_session1.jsonl  transcript_class_ms8a_session2.jsonl  transcript_emma_1.jsonl  transcript_marcus_1.jsonl  transcript_sarah_1.jsonl
backend/tests/: __init__.py  test_assessments_api.py  test_auth.py  test_evidence_extraction.py  test_ingest_api.py  test_ingest_validators.py  test_jobs_api.py  test_main.py
dashboard/: .env.example  Dockerfile  README.txt  app.py  auth.py  components.py  config.py  nixpacks.toml  nixpacks.toml.backup  pyproject.toml  requirements.txt  utils.py
dashboard/.streamlit/: config.toml
dashboard/pages/: class_overview.py  student_detail.py  trends.py  uploads.py
dashboard/styles/: pulsemax.css
dashboard/views/: __init__.py  class_overview.py  student_detail.py  trends.py  uploads.py
(+102 files in other folders)
