[project]
name = "assessmax-dashboard"
version = "0.1.0"
description = "Middle School Non-Academic Skills Measurement Engine - Educator Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "pydantic>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "reportlab>=4.0.0",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
